--- a/.env.daoCloud
+++ b/.env.daoCloud
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=0kw9a1yklldLqFbCQF3hIYO4JdXUVpeq
+APP_KEY=somekey
 
 DB_HOST={$MYSQL_PORT_3306_TCP_ADDR}
 DB_DATABASE={$MYSQL_INSTANCE_NAME}
