--- a/.env.daoCloud
+++ b/.env.daoCloud
@@ -2,10 +2,10 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=somekey
 
-DB_HOST={$MYSQL_PORT_3306_TCP_ADDR}
-DB_DATABASE={$MYSQL_INSTANCE_NAME}
-DB_USERNAME={$MYSQL_USERNAME}
-DB_PASSWORD={$MYSQL_PASSWORD}
+DB_HOST="{$MYSQL_PORT_3306_TCP_ADDR}"
+DB_DATABASE="{$MYSQL_INSTANCE_NAME}"
+DB_USERNAME="{$MYSQL_USERNAME}"
+DB_PASSWORD="{$MYSQL_PASSWORD}"
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
