--- a/.env.daoCloud
+++ b/.env.daoCloud
@@ -2,10 +2,10 @@ APP_ENV=local
 APP_DEBUG=true
 APP_KEY=somekey
 
-DB_HOST="{$MYSQL_PORT_3306_TCP_ADDR}"
-DB_DATABASE="{$MYSQL_INSTANCE_NAME}"
-DB_USERNAME="{$MYSQL_USERNAME}"
-DB_PASSWORD="{$MYSQL_PASSWORD}"
+DB_HOST=10.10.26.58
+DB_DATABASE=cOjUna27PMCuQmwy
+DB_USERNAME=uq9jJ0Ddwha5fy1m
+DB_PASSWORD=pSoeqzFd9KW5RtNEY
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
